fixing missing border on card buttons

--- a/assets/css/_buttons.scss
+++ b/assets/css/_buttons.scss
@@ -99,6 +99,8 @@ button, .button {
 
   background: $allo-cardbtn-default-bg;
   box-shadow: $allo-card-box-shadow;
+  outline-width: $border-width-base;
+  outline-style: solid;
 
   .title {
     font-size: 26px;
